--- a/science/physics.tex
+++ b/science/physics.tex
@@ -502,14 +502,13 @@ $a_n= \int_{T/2}^{T/2} V(t) cos(n \omega t)$,
 $b_n= \int_{T/2}^{T/2} V(t) sin(n \omega t)$.
 \\
 \\
-{\bf Reflection on string:}
+{\bf Waves on strings:}  Impedence, $Z$, measures rate energy is radiated;
+for travelling wave, radiated power is
+$P(t)= Z ({\frac {\partial \psi} {\partial t}})^2= F {\frac {\partial \psi} {\partial t}}$.
 $ {\frac {\partial^2 \psi} {\partial t^2}} =
-{\frac T {\rho}} {\frac {\partial^2 \psi} {\partial x^2}}$,
+{\frac T {\mu}} {\frac {\partial^2 \psi} {\partial x^2}}$,
 $v_{\phi}={\frac \omega k}$,
-$v_{g}={\frac {d\omega} {dk}}$, $Z= {\sqrt {T \rho}}$.
-\emph{Power:} $P(t)= F {\frac {\partial \psi} {\partial t}}$,
-For travelling wave:
-$P(t)= Z({\frac {\partial \psi} {\partial t}})^2$.
+$v_{g}={\frac {d\omega} {dk}}$, $Z= {\frac {T} {v_{\phi}}}$.
 Consider a wave train on a string from the left ($L$) with a change
 at $x=0$ of medium (i.e. a denser string) to a string on the right ($R$).
 Dispersion caused by variation of wave velocity by frequency
@@ -518,8 +517,7 @@ to string of density $\mu_2$ at $0$.  $f_1(x-{\frac {x} {v_1}}) + g(x+{\frac {x}
 = f_2 (x- {\frac {x} {v_2}})$.  At $0$: $f_1(t)+g(t)=f_2(t)$ and
 ${\frac {f_1'(t)} {v_1}}-{\frac {g'(t)} {v_1}} = {\frac {f_2'(t)} {v_2}}$;
 solve to get $g(t)= {\frac {v_2 - v_1} {v_2+v_1}} f_1(t)$ and
-$f_2(t)= {\frac {2v_2} {v_2+v_1}} f_1(t)$.  \emph{Mach angle:}
-$sin( \theta)= {\frac u v}$.
+$f_2(t)= {\frac {2v_2} {v_2+v_1}} f_1(t)$.
 For perfect termination:
 $F_{\small {term}} (\textnormal{``R on L''})= -
 Z_L {\frac {\partial \psi_{inc}} {\partial t}} (0,t)$.
@@ -533,8 +531,13 @@ Z_L {\frac {\partial \psi_{ref}} {\partial t}} (0,t) =
 ${\frac {\partial \psi_{ref}} {\partial t}} (0,t)=
 {\frac {Z_L - Z_R} {Z_L + Z_R}}
 {\frac {\partial \psi_{inc}} {\partial t}} (0,t)$.
-$R= {\frac {Z_L - Z_R} {Z_L + Z_R}}$ is called the reflection coefficient.
+$R= {\frac {Z_L - Z_R} {Z_L + Z_R}}$ is called the reflection coefficient
+Total energy for travelling wave on string for on wavelength is
+$E_T= {\frac 1 2} \mu \omega^2 A^2 \lambda$; so, average power over a
+cycle is $P(t)= {\frac 1 2} \mu \omega^2 A^2 v$ ($A$ is amplitude, $v$ is
+phase velocity of the wave). \\
 \\
+\emph{Mach angle:} $sin( \theta)= {\frac u v}$.  \\
 \\
 {\bf Transmission boundary:} Let 
 $v_I({\frac {x}{v_1}}-t), x < 0$,
@@ -755,7 +758,7 @@ Al, 30; Cu, 42; Fe, 100.\\
 Energy content of one gallon of heating oil: $140,000 kJ/gallon$.
 \\
 \\
-{\bf Air:} 28.96 m-w, $c_{p}$ = 1005 J/kg-K, $c_{v} = 718 J/kg-K$.
+{\bf Air:} Molar weight: 28.96, $c_{p}$ = 1005 J/kg-K, $c_{v} = 718 J/kg-K$.
 $1\; atm= 1.013 \times 10^{5} Pa$, $Pa= 10^{6} dyne/cm^{2}= 1N/m^2=760 mm-Hg$.
 $\rho: 1.293 mg/cm^{3}$, $\kappa :  2.4 \times 10^{-2} W/m-K$, $visc@20: .00018 g/cm-s.$
 \\
