--- a/science/physics.tex
+++ b/science/physics.tex
@@ -1299,7 +1299,7 @@ $C_v = {\frac {\partial E_{\small{internal}}} {\partial T}}$.
 For insulators, $C_v= 3R$ and
 for conductors, $C_v= {\frac 9 2}R$.  $F= E-TS$.
 For ideal gas, $C_v= {\frac {3}{2}}R$.
-$Z= \sum_j e^{\beta E_j}$ and $\langle E \rangle = -{\frac {\partial ln(Z)} {\partial \beta}}$.
+$Z= \sum_j e^{-\beta E_j}$ and $\langle E \rangle = -{\frac {\partial ln(Z)} {\partial \beta}}$.
 If $I_n= \int_{0}^{\infty} e^{-\alpha x^2} x^2 dx$ then $I_n= {\frac {n-1} {2 \alpha}} I_{n-2}$.
 \\
 \\
