small add and fix

--- a/science/physics.tex
+++ b/science/physics.tex
@@ -509,10 +509,11 @@ $ {\frac {\partial^2 \psi} {\partial t^2}} =
 {\frac T {\mu}} {\frac {\partial^2 \psi} {\partial x^2}}$,
 $v_{\phi}={\frac \omega k}$,
 $v_{g}={\frac {d\omega} {dk}}$, $Z= {\frac {T} {v_{\phi}}}$.
+Dispersion caused by variation of wave velocity by frequency
+relation $\omega= f(k)$.  
 Consider a wave train on a string from the left ($L$) with a change
 at $x=0$ of medium (i.e. a denser string) to a string on the right ($R$).
-Dispersion caused by variation of wave velocity by frequency
-relation $\omega= f(k)$.  Consider string of density $\mu_1$ connected
+Suppose a string of density $\mu_1$ is connected
 to string of density $\mu_2$ at $0$.  $f_1(x-{\frac {x} {v_1}}) + g(x+{\frac {x} {v_1}})
 = f_2 (x- {\frac {x} {v_2}})$.  At $0$: $f_1(t)+g(t)=f_2(t)$ and
 ${\frac {f_1'(t)} {v_1}}-{\frac {g'(t)} {v_1}} = {\frac {f_2'(t)} {v_2}}$;
@@ -532,10 +533,10 @@ ${\frac {\partial \psi_{ref}} {\partial t}} (0,t)=
 {\frac {Z_L - Z_R} {Z_L + Z_R}}
 {\frac {\partial \psi_{inc}} {\partial t}} (0,t)$.
 $R= {\frac {Z_L - Z_R} {Z_L + Z_R}}$ is called the reflection coefficient
-Total energy for travelling wave on string for on wavelength is
+Total energy for travelling wave on string for one wavelength is
 $E_T= {\frac 1 2} \mu \omega^2 A^2 \lambda$; so, average power over a
 cycle is $P(t)= {\frac 1 2} \mu \omega^2 A^2 v$ ($A$ is amplitude, $v$ is
-phase velocity of the wave). \\
+phase velocity of the wave). For string, $dU = {\frac 1 2} T y^2 dx$.\\
 \\
 \emph{Mach angle:} $sin( \theta)= {\frac u v}$.  \\
 \\
