--- a/science/math4.tex
+++ b/science/math4.tex
@@ -32,9 +32,9 @@ ${\frac {({\vec {x_0}} - {\vec {x_1}}) \cdot ({\vec a} - {\vec b})}
 {||{\vec a} \times {\vec b}||}}$.
 \\
 \\
-{\bf Rotation of coordinates through $\theta$:}
-$x' = x cos( \theta ) + y sin( \theta )$, 
-$y' = y cos( \theta ) - x sin( \theta )$.
+{\bf Rotation through $\theta$:}
+To transform coordinates: $x' = x cos( \theta ) + y sin( \theta )$, $y' = y cos( \theta ) - x sin( \theta )$.
+To rotate a point: $x' = x cos( \theta ) - y sin( \theta )$, $y' = y cos( \theta ) + x sin( \theta )$.
 \\
 \\
 {\bf Moebius Transformations:} 
