--- a/science/math1.tex
+++ b/science/math1.tex
@@ -216,8 +216,11 @@ $\alpha \ge 3$ then $\pm 5$, $\pm 5^2$, ..., $\pm 5^{2^{\alpha - 2}}$ is a compl
 \emph{Proof:} 
 \end{quote}
 {\bf Definition:} Let $S_k = \{y: 1 \leq y <k: (y,k)=1 \}$.  $\phi(k)= |S_k|$.
-Let $n= {p_1}^{e_1} {p_2}^{e_2} \ldots {p_k}^{e_k}$.
-$\mu(1)= 1$, if $n=1$; $\mu(n)=0$ if $e_i > 1$ for any $i$; otherwise, $\mu(n)= (-1)^k$.
+Let $n= {p_1}^{e_1} {p_2}^{e_2} \ldots {p_k}^{e_k}$. $f$ is \emph{multiplicative}
+if $(m,n)=1$ $\rightarrow$ $f(mn)=f(m)f(n)$.
+$\mu(1)= 1$, if $n=1$; $\mu(n)=1$.  If 
+$n= {p_1}^{e_1} {p_2}^{e_2} \ldots {p_k}^{e_k}$.
+$e_i > 1$ for any $i$, $\mu(n)=0$; otherwise, $\mu(n)= (-1)^k$.
 \\
 \\
 {\bf Theorem:} 
